RESOLVED FIXED59818
Application cache doesn't work due to a sandbox violation
https://bugs.webkit.org/show_bug.cgi?id=59818
Summary Application cache doesn't work due to a sandbox violation
Anders Carlsson
Reported 2011-04-29 12:00:26 PDT
Application cache doesn't work due to a sandbox violation
Attachments
Patch (5.09 KB, patch)
2011-04-29 12:05 PDT, Anders Carlsson
darin: review+
Anders Carlsson
Comment 1 2011-04-29 12:05:08 PDT
Anders Carlsson
Comment 2 2011-04-29 12:12:08 PDT
Note You need to log in before you can comment on or make changes to this bug.