2011-04-29  Anders Carlsson  <andersca@apple.com>

Reviewed by Darin Adler.

        Application cache doesn't work due to a sandbox violation
        https://bugs.webkit.org/show_bug.cgi?id=59818
        <rdar://problem/9346971>

        Add a sandbox extension for the application cache directory.

        * Shared/WebProcessCreationParameters.cpp:
        (WebKit::WebProcessCreationParameters::encode):
        (WebKit::WebProcessCreationParameters::decode):
        Encode and decode the sandbox extension handle.

        * Shared/WebProcessCreationParameters.h:
        Add a applicationCacheDirectoryExtensionHandle member.

        * UIProcess/WebContext.cpp:
        (WebKit::WebContext::ensureWebProcess):
        If we have a non-empty application cache directory, create a sandbox extension
        and pass it to the creation parameters.

        * WebProcess/WebProcess.cpp:
        (WebKit::WebProcess::initializeWebProcess):
        Create and consume a sandbox extension.

        * WebProcess/WebProcess.h:
        Add an m_applicationCachePathExtension member variable.


Canonical link: https://commits.webkit.org/75051@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85345 268f45cc-cd09-0410-ab3c-d52691b4dbfc