Source/WebKit2/WebProcess/WebProcess.cpp
@@ -193,8 +193,12 @@ void WebProcess::initializeWebProcess(const WebProcessCreationParameters& parame
 #endif
     
 #if ENABLE(OFFLINE_WEB_APPLICATIONS)
-    if (!parameters.applicationCacheDirectory.isEmpty())
+    if (!parameters.applicationCacheDirectory.isEmpty()) {
+        m_applicationCachePathExtension = SandboxExtension::create(parameters.applicationCacheDirectoryExtensionHandle);
+        m_applicationCachePathExtension->consume();
+
         cacheStorage().setCacheDirectory(parameters.applicationCacheDirectory);
+    }
 #endif
 
     setShouldTrackVisitedLinks(parameters.shouldTrackVisitedLinks);
